Antlr3.StringTemplate/Language/ActionParser.cs
// $ANTLR 3.1.2 Language\\Action.g3 2009-04-11 17:03:15

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


/*
 [The "BSD licence"]
 Copyright (c) 2005-2008 Terence Parr
 All rights reserved.

 Grammar conversion to ANTLR v3 and C#:
 Copyright (c) 2008 Sam Harwell, Pixel Mine, Inc.
 All rights reserved.

 Redistribution and use in source and binary forms, with or without
 modification, are permitted provided that the following conditions
 are met:
 1. Redistributions of source code must retain the above copyright
	notice, this list of conditions and the following disclaimer.
 2. Redistributions in binary form must reproduce the above copyright
	notice, this list of conditions and the following disclaimer in the
	documentation and/or other materials provided with the distribution.
 3. The name of the author may not be used to endorse or promote products
	derived from this software without specific prior written permission.

 THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
 IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
 OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
 IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
 INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
 NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
 DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
 THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
*/


using System.Collections.Generic;
using Antlr.Runtime;
using Stack = System.Collections.Generic.Stack<object>;
using List = System.Collections.IList;
using ArrayList = System.Collections.Generic.List<object>;
using Map = System.Collections.IDictionary;
using HashMap = System.Collections.Generic.Dictionary<object, object>;

using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  Antlr3.ST.Language 
{
public partial class ActionParser : Parser
{
	public static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ANONYMOUS_TEMPLATE", "APPLY", "ARGS", "ASSIGN", "COLON", "COMMA", "CONDITIONAL", "DOT", "DOTDOTDOT", "ELSEIF", "ESC_CHAR", "FIRST", "FUNCTION", "ID", "INCLUDE", "INT", "LAST", "LBRACK", "LENGTH", "LIST", "LPAREN", "MULTI_APPLY", "NESTED_ANONYMOUS_TEMPLATE", "NEWLINE", "NOT", "NOTHING", "PLUS", "RBRACK", "REST", "RPAREN", "SEMI", "SINGLEVALUEARG", "STRING", "STRIP", "SUPER", "TEMPLATE", "TEMPLATE_ARGS", "TRUNC", "VALUE", "WS", "WS_CHAR"
	};
	public const int EOF=-1;
	public const int ANONYMOUS_TEMPLATE=4;
	public const int APPLY=5;
	public const int ARGS=6;
	public const int ASSIGN=7;
	public const int COLON=8;
	public const int COMMA=9;
	public const int CONDITIONAL=10;
	public const int DOT=11;
	public const int DOTDOTDOT=12;
	public const int ELSEIF=13;
	public const int ESC_CHAR=14;
	public const int FIRST=15;
	public const int FUNCTION=16;
	public const int ID=17;
	public const int INCLUDE=18;
	public const int INT=19;
	public const int LAST=20;
	public const int LBRACK=21;
	public const int LENGTH=22;
	public const int LIST=23;
	public const int LPAREN=24;
	public const int MULTI_APPLY=25;
	public const int NESTED_ANONYMOUS_TEMPLATE=26;
	public const int NEWLINE=27;
	public const int NOT=28;
	public const int NOTHING=29;
	public const int PLUS=30;
	public const int RBRACK=31;
	public const int REST=32;
	public const int RPAREN=33;
	public const int SEMI=34;
	public const int SINGLEVALUEARG=35;
	public const int STRING=36;
	public const int STRIP=37;
	public const int SUPER=38;
	public const int TEMPLATE=39;
	public const int TEMPLATE_ARGS=40;
	public const int TRUNC=41;
	public const int VALUE=42;
	public const int WS=43;
	public const int WS_CHAR=44;

	// delegates
	// delegators

	public ActionParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public ActionParser( ITokenStream input, RecognizerSharedState state )
		: base( input, state )
	{
		InitializeTreeAdaptor();
		if ( TreeAdaptor == null )
			TreeAdaptor = new CommonTreeAdaptor();
	}
		
	// Implement this function in your helper file to use a custom tree adaptor
	partial void InitializeTreeAdaptor();
	ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}
		set
		{
			this.adaptor = value;
		}
	}

	public override string[] GetTokenNames() { return ActionParser.tokenNames; }
	public override string GrammarFileName { get { return "Language\\Action.g3"; } }


	#region Rules
	public class action_return : ParserRuleReturnScope
	{
		public IDictionary<string, object> opts=null;
		public StringTemplateAST tree;
		public override object Tree { get { return tree; } }
	}

	// $ANTLR start "action"
	// Language\\Action.g3:145:0: public action returns [IDictionary<string, object> opts=null] : ( templatesExpr ( SEMI optionList )? | 'if' LPAREN ifCondition RPAREN | 'elseif' LPAREN ifCondition RPAREN ) EOF ;
	public ActionParser.action_return action(  )
	{
		ActionParser.action_return retval = new ActionParser.action_return();
		retval.start = input.LT(1);

		StringTemplateAST root_0 = null;

		IToken SEMI2=null;
		IToken string_literal4=null;
		IToken LPAREN5=null;
		IToken RPAREN7=null;
		IToken string_literal8=null;
		IToken LPAREN9=null;
		IToken RPAREN11=null;
		IToken EOF12=null;
		ActionParser.templatesExpr_return templatesExpr1 = default(ActionParser.templatesExpr_return);
		ActionParser.optionList_return optionList3 = default(ActionParser.optionList_return);
		ActionParser.ifCondition_return ifCondition6 = default(ActionParser.ifCondition_return);
		ActionParser.ifCondition_return ifCondition10 = default(ActionParser.ifCondition_return);

		StringTemplateAST SEMI2_tree=null;
		StringTemplateAST string_literal4_tree=null;
		StringTemplateAST LPAREN5_tree=null;
		StringTemplateAST RPAREN7_tree=null;
		StringTemplateAST string_literal8_tree=null;
		StringTemplateAST LPAREN9_tree=null;
		StringTemplateAST RPAREN11_tree=null;
		StringTemplateAST EOF12_tree=null;

		try
		{
			// Language\\Action.g3:146:4: ( ( templatesExpr ( SEMI optionList )? | 'if' LPAREN ifCondition RPAREN | 'elseif' LPAREN ifCondition RPAREN ) EOF )
			// Language\\Action.g3:146:4: ( templatesExpr ( SEMI optionList )? | 'if' LPAREN ifCondition RPAREN | 'elseif' LPAREN ifCondition RPAREN ) EOF
			{
			root_0 = (StringTemplateAST)adaptor.Nil();

			// Language\\Action.g3:146:4: ( templatesExpr ( SEMI optionList )? | 'if' LPAREN ifCondition RPAREN | 'elseif' LPAREN ifCondition RPAREN )
			int alt2=3;
			switch ( input.LA(1) )
			{
			case ANONYMOUS_TEMPLATE:
			case FIRST:
			case ID:
			case INT:
			case LAST:
			case LBRACK:
			case LENGTH:
			case LPAREN:
			case REST:
			case STRING:
			case STRIP:
			case SUPER:
			case TRUNC:
				{
				alt2=1;
				}
				break;
			case CONDITIONAL:
				{
				alt2=2;
				}
				break;
			case ELSEIF:
				{
				alt2=3;
				}
				break;
			default:
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 2, 0, input);

					throw nvae;
				}
			}

			switch ( alt2 )
			{
			case 1:
				// Language\\Action.g3:146:6: templatesExpr ( SEMI optionList )?
				{
				PushFollow(Follow._templatesExpr_in_action192);
				templatesExpr1=templatesExpr();

				state._fsp--;
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, templatesExpr1.Tree);
				// Language\\Action.g3:146:20: ( SEMI optionList )?
				int alt1=2;
				int LA1_0 = input.LA(1);

				if ( (LA1_0==SEMI) )
				{
					alt1=1;
				}
				switch ( alt1 )
				{
				case 1:
					// Language\\Action.g3:146:21: SEMI optionList
					{
					SEMI2=(IToken)Match(input,SEMI,Follow._SEMI_in_action195); if (state.failed) return retval;
					PushFollow(Follow._optionList_in_action198);
					optionList3=optionList();

					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking == 0 ) adaptor.AddChild(root_0, optionList3.Tree);
					if ( state.backtracking == 0 )
					{
						retval.opts = (optionList3!=null?optionList3.opts:default(IDictionary<string, object>));
					}

					}
					break;

				}


				}
				break;
			case 2:
				// Language\\Action.g3:147:5: 'if' LPAREN ifCondition RPAREN
				{
				string_literal4=(IToken)Match(input,CONDITIONAL,Follow._CONDITIONAL_in_action208); if (state.failed) return retval;
				if ( state.backtracking == 0 ) {
				string_literal4_tree = (StringTemplateAST)adaptor.Create(string_literal4);
				root_0 = (StringTemplateAST)adaptor.BecomeRoot(string_literal4_tree, root_0);
				}
				LPAREN5=(IToken)Match(input,LPAREN,Follow._LPAREN_in_action211); if (state.failed) return retval;
				PushFollow(Follow._ifCondition_in_action214);
				ifCondition6=ifCondition();

				state._fsp--;
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, ifCondition6.Tree);
				RPAREN7=(IToken)Match(input,RPAREN,Follow._RPAREN_in_action216); if (state.failed) return retval;

				}
				break;
			case 3:
				// Language\\Action.g3:148:5: 'elseif' LPAREN ifCondition RPAREN
				{
				string_literal8=(IToken)Match(input,ELSEIF,Follow._ELSEIF_in_action223); if (state.failed) return retval;
				LPAREN9=(IToken)Match(input,LPAREN,Follow._LPAREN_in_action226); if (state.failed) return retval;
				PushFollow(Follow._ifCondition_in_action229);
				ifCondition10=ifCondition();

				state._fsp--;
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, ifCondition10.Tree);
				RPAREN11=(IToken)Match(input,RPAREN,Follow._RPAREN_in_action231); if (state.failed) return retval;

				}
				break;

			}

			EOF12=(IToken)Match(input,EOF,Follow._EOF_in_action241); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			EOF12_tree = (StringTemplateAST)adaptor.Create(EOF12);
			adaptor.AddChild(root_0, EOF12_tree);
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.tree = (StringTemplateAST)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch ( RecognitionException re )
		{
			ReportError(re);
			Recover(input,re);
		retval.tree = (StringTemplateAST)adaptor.ErrorNode(input, retval.start, input.LT(-1), re);

		}
		finally
		{
		}
		return retval;
	}
	// $ANTLR end "action"

	public class optionList_return : ParserRuleReturnScope
	{
		public IDictionary<string, object> opts=new Dictionary<string, object>();
		public StringTemplateAST tree;
		public override object Tree { get { return tree; } }
	}

	// $ANTLR start "optionList"
	// Language\\Action.g3:153:0: optionList returns [IDictionary<string, object> opts=new Dictionary<string, object>()] : option[$opts] ( COMMA option[$opts] )* ;
	private ActionParser.optionList_return optionList(  )
	{
		ActionParser.optionList_return retval = new ActionParser.optionList_return();
		retval.start = input.LT(1);

		StringTemplateAST root_0 = null;

		IToken COMMA14=null;
		ActionParser.option_return option13 = default(ActionParser.option_return);
		ActionParser.option_return option15 = default(ActionParser.option_return);

		StringTemplateAST COMMA14_tree=null;

		try
		{
			// Language\\Action.g3:154:4: ( option[$opts] ( COMMA option[$opts] )* )
			// Language\\Action.g3:154:4: option[$opts] ( COMMA option[$opts] )*
			{
			root_0 = (StringTemplateAST)adaptor.Nil();

			PushFollow(Follow._option_in_optionList257);
			option13=option(retval.opts);

			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) adaptor.AddChild(root_0, option13.Tree);
			// Language\\Action.g3:154:18: ( COMMA option[$opts] )*
			for ( ; ; )
			{
				int alt3=2;
				int LA3_0 = input.LA(1);

				if ( (LA3_0==COMMA) )
				{
					alt3=1;
				}


				switch ( alt3 )
				{
				case 1:
					// Language\\Action.g3:154:19: COMMA option[$opts]
					{
					COMMA14=(IToken)Match(input,COMMA,Follow._COMMA_in_optionList261); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					COMMA14_tree = (StringTemplateAST)adaptor.Create(COMMA14);
					adaptor.AddChild(root_0, COMMA14_tree);
					}
					PushFollow(Follow._option_in_optionList263);
					option15=option(retval.opts);

					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking == 0 ) adaptor.AddChild(root_0, option15.Tree);

					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;



			}

			retval.stop = input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.tree = (StringTemplateAST)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch ( RecognitionException re )
		{
			ReportError(re);
			Recover(input,re);
		retval.tree = (StringTemplateAST)adaptor.ErrorNode(input, retval.start, input.LT(-1), re);

		}
		finally
		{
		}
		return retval;
	}
	// $ANTLR end "optionList"

	public class option_return : ParserRuleReturnScope
	{
		public StringTemplateAST tree;
		public override object Tree { get { return tree; } }
	}

	// $ANTLR start "option"
	// Language\\Action.g3:157:0: option[IDictionary<string, object> opts] : ID ( ASSIGN nonAlternatingTemplateExpr |) ;
	private ActionParser.option_return option( IDictionary<string, object> opts )
	{
		ActionParser.option_return retval = new ActionParser.option_return();
		retval.start = input.LT(1);

		StringTemplateAST root_0 = null;

		IToken ID16=null;
		IToken ASSIGN17=null;
		ActionParser.nonAlternatingTemplateExpr_return nonAlternatingTemplateExpr18 = default(ActionParser.nonAlternatingTemplateExpr_return);

		StringTemplateAST ID16_tree=null;
		StringTemplateAST ASSIGN17_tree=null;


		object v=null;

		try
		{
			// Language\\Action.g3:162:4: ( ID ( ASSIGN nonAlternatingTemplateExpr |) )
			// Language\\Action.g3:162:4: ID ( ASSIGN nonAlternatingTemplateExpr |)
			{
			root_0 = (StringTemplateAST)adaptor.Nil();

			ID16=(IToken)Match(input,ID,Follow._ID_in_option283); if (state.failed) return retval;
			if ( state.backtracking==0 ) {
			ID16_tree = (StringTemplateAST)adaptor.Create(ID16);
			adaptor.AddChild(root_0, ID16_tree);
			}
			// Language\\Action.g3:163:3: ( ASSIGN nonAlternatingTemplateExpr |)
			int alt4=2;
			int LA4_0 = input.LA(1);

			if ( (LA4_0==ASSIGN) )
			{
				alt4=1;
			}
			else if ( (LA4_0==EOF||LA4_0==COMMA) )
			{
				alt4=2;
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae = new NoViableAltException("", 4, 0, input);

				throw nvae;
			}
			switch ( alt4 )
			{
			case 1:
				// Language\\Action.g3:163:5: ASSIGN nonAlternatingTemplateExpr
				{
				ASSIGN17=(IToken)Match(input,ASSIGN,Follow._ASSIGN_in_option289); if (state.failed) return retval;
				if ( state.backtracking==0 ) {
				ASSIGN17_tree = (StringTemplateAST)adaptor.Create(ASSIGN17);
				adaptor.AddChild(root_0, ASSIGN17_tree);
				}
				PushFollow(Follow._nonAlternatingTemplateExpr_in_option291);
				nonAlternatingTemplateExpr18=nonAlternatingTemplateExpr();

				state._fsp--;
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, nonAlternatingTemplateExpr18.Tree);
				if ( state.backtracking == 0 )
				{
					v=(nonAlternatingTemplateExpr18!=null?((StringTemplateAST)nonAlternatingTemplateExpr18.tree):null);
				}

				}
				break;
			case 2:
				// Language\\Action.g3:164:5: 
				{
				if ( state.backtracking == 0 )
				{
					v=ASTExpr.EmptyOption;
				}

				}
				break;

			}

			if ( state.backtracking == 0 )
			{
				opts[(ID16!=null?ID16.Text:null)] = v;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.tree = (StringTemplateAST)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch ( RecognitionException re )
		{
			ReportError(re);
			Recover(input,re);
		retval.tree = (StringTemplateAST)adaptor.ErrorNode(input, retval.start, input.LT(-1), re);

		}
		finally
		{
		}
		return retval;
	}
	// $ANTLR end "option"

	public class templatesExpr_return : ParserRuleReturnScope
	{
		public StringTemplateAST tree;
		public override object Tree { get { return tree; } }
	}
